fixing a little overflow on mobile, fixing copy.

--- a/client/styles/sass/base/_globals.scss
+++ b/client/styles/sass/base/_globals.scss
@@ -66,7 +66,7 @@ img {
   width: 100%;
   @include breakpoint(break-1) {
     margin: 0 auto;
-    max-width: 100%;
+    width: 100%;
     width: auto;
   }
 }
